--- a/style/style_about.css
+++ b/style/style_about.css
@@ -97,3 +97,23 @@ footer {visibility: hidden;}
 
 #MainMenu {visibility: hidden;}
 footer {visibility: hidden;}
+
+
+.tujuan-card{
+    width: 100%;
+    height: 85%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
+
+.gambar-tujuan {
+    display: flex; /* Menggunakan flexbox */
+    justify-content: center; /* Gambar berada di tengah horizontal */
+    align-items: center; /* Gambar berada di tengah vertikal */
+    height: 100px; /* Tinggi container */
+}
+.gambar-tujuan img {
+    width: 160px; /* Ukuran gambar */
+}
