--- a/style/organik.css
+++ b/style/organik.css
@@ -46,4 +46,6 @@ footer {visibility: hidden;}
 
 .p-organik{
     text-align: justify;
+    font-family: Open Sans, Helvetica, Arial, sans-serif;
+    font-size: 16px;
 }
