--- a/style/anorganic.css
+++ b/style/anorganic.css
@@ -18,13 +18,10 @@ footer {visibility: hidden;}
     width: 250px;
 }
 
-.mengelola{
-    width: 300px;
-}
 
 
 .banner {
-    height: 60vh;
+    height: 80vh;
 }
 
 .banner-content {
@@ -48,4 +45,30 @@ footer {visibility: hidden;}
     text-align: justify;
     font-size: 16px;
     font-family: Open Sans, Helvetica, Arial, sans-serif;
+}
+
+.contoh-anorganik{
+    background-color: #f5f5f5;
+}
+
+
+h2::before, h2::after {
+    background-color: #17A2B8;
+    content: '';
+    display: inline-block;
+    height: 1px;
+    width: 20%; /* Ubah sesuai dengan kebutuhan */
+    position: relative;
+    vertical-align: middle;
+}
+
+
+h2::before{
+    right: 0.5em;
+    margin-left: -50%;
+}
+
+h2::after{
+    left: 0.5em;
+    margin-right: -50%;
 }
